<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Gojūon</string>
    <string name="email"
            translatable="false">lucky@gracecode.com</string>

    <string name="monographs">かな</string>
    <string name="digraphs">だくかな</string>
    <string name="monographs_with_diacritics">ようおん</string>
    <string name="digraphs_with_diacritics">だくようおん</string>

    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="about">About</string>
    <string name="setting">Preferences</string>
    <string name="other">Other</string>
    <string name="auto_resume">Auto Resume</string>
    <string name="last_use_page">Last Used Page</string>
    <string name="keep_screen_on">Keep Screen On</string>
    <string name="keep_screen_on_summary">Keep screen on while application is running.</string>
    <string name="auto_resume_summray">Recover last viewed page when application is resumed.</string>
    <string name="using_tts">Using TTS Engine</string>
    <string name="using_tts_summary">Pronounce syllable though system\'s TTS engine(if installed).</string>
    <string name="feedback_summary">If you have any idea or problem, please email me.</string>
    <string name="donate_summary">Thanks for giving me a cup of coffee.</string>
    <string name="about_summary"
            formatted="false">Current version %s(%s).</string>
    <string name="send_email_faild">Send email failed. may be email client not installed?</string>
    <string name="feedback_subject"
            formatted="false">Feedback for %s %s</string>
    <string name="highlight_selected">Highlight Selected</string>
    <string name="highlight_selected_summary">Highlight pressed character item</string>
    <string name="version">Version</string>
    <string name="auto_rotate">Auto Rotate</string>
    <string name="auto_rotate_summary">Auto rotate when the device\'s direction is changed.</string>
    <string name="language">Language</string>
    <string name="language_summray">Select application display language</string>
    <string name="language_auto">Auto Choice</string>
    <string name="language_english">English</string>
    <string name="language_chinese">Chinese</string>
    <string name="play">Play</string>
    <string name="try_again">Try Again</string>
    <string name="exam_redo_wrong">Redo Wrong Topic</string>
    <string name="configure">Configure</string>
    <string name="exam">Quiz</string>
    <string name="question_num">Number of Questions</string>
    <string name="exam_question_num_summary">The number of topics for each quiz</string>
    <string name="exam_scope">Quiz Scope</string>
    <string name="exam_scope_summary">Select the scope of topics</string>

    <string name="all">All</string>
    <string name="exam_summary">Test your Hiragana or Katagana skills</string>

    <string name="show_character_type">Show Character Type</string>
    <string name="show_character_type_summary">Which character primary to show, Hiragana or Katagana?</string>

    <string name="hiragana">Hiragana</string>
    <string name="katagana">Katagana</string>
    <string name="random">Random</string>
    <string name="exit">Exit</string>
    <string name="exam_exit">Exit Quiz</string>
    <string name="auto_rexam_wrong_topic">Auto Redo The Wrong Topic</string>
    <string name="exam_start">Start Quiz</string>
    <string name="are_you_ready">Are you ready?</string>
    <string name="exam_show_character_type_summary"
            formatted="false">Which character needs primary to quiz,
        Hiragana / Katagana / Random?</string>
    <string name="question_timeout">Quiz Time</string>
    <string name="question_timeout_summary"
            formatted="false">Set each question\'s quiz time, if timeout this will be
        marked wrong.</string>
    <string name="fast">Fast</string>
    <string name="normal">Normal</string>
    <string name="slow">Slow</string>
    <string name="highlight_result">Highlight Result</string>
    <string name="highlight_result_summary">Highlight the result if choose the wrong topic</string>
    <string name="auto_requiz_wrong_topic">Auto Redo The Wrong Topic</string>
    <string name="auto_requiz_wrong_topic_summary"
            formatted="false">Auto redo the wrong topic,
        don\'t show result dialog in every time
    </string>
    <string name="auto_requiz_wrong_topic_notify"
            formatted="false">You have %d wrong topics, auto redo!</string>
    <string name="exam_show_character_type">Character Type for Quiz</string>
    <string name="katakana_first">Katakana First</string>
    <string name="katakana_first_summary">Show Katakana first at each grid</string>
    <string name="slideshow">Slide Show</string>
    <string name="show_shadow">Show Shadow Animator</string>
    <string name="show_shadow_summary">Show shadow animator when character grid was pressed.</string>
    <string name="no_score">N/A</string>
    <string name="clear_record">Clear Record</string>
    <string name="sure_to_clear_record">Are you sure to clear all exam record?</string>
    <string name="clear_record_finished">All records was cleared.</string>
    <string name="clear_record_summaray">Clear all exam score record. Notice! this action can not be undo.</string>
    <string name="your_source">Your score is</string>
    <string name="need_to_practice">You need to practice</string>
    <string name="exam_title">Level No. %d</string>
    <string name="show_handwriting">Use Handwriting Fonts</string>
    <string name="show_handwriting_summary">Use handwriting font instead of system fonts.</string>
</resources>
