<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <CheckBoxPreference
            android:key="key_screen_on"
            android:title="@string/keep_screen_on"
            android:summary="@string/keep_screen_on_summary"
            android:defaultValue="true"
            />

    <PreferenceCategory android:title="@string/app_name">
        <ListPreference
                android:key="key_auto_resume"
                android:title="@string/auto_resume"
                android:entries="@array/resume_list"
                android:entryValues="@array/resume_list_value"
                android:summary="@string/auto_resume_summray"
                android:defaultValue="-1"
                />

        <CheckBoxPreference
                android:key="key_tts"
                android:title="@string/using_tts"
                android:summary="@string/using_tts_summary"
                android:defaultValue="false"
                android:enabled="false"
                />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/other">
        <Preference
                android:key="key_feedback"
                android:title="@string/feedback"
                android:summary="@string/feedback_summary"/>

        <Preference
                android:key="key_donate"
                android:title="@string/donate"
                android:summary="@string/donate_summary"/>

        <Preference
                android:key="key_about"
                android:title="@string/about"
                android:summary="@string/about_summary"/>

    </PreferenceCategory>
</PreferenceScreen>
