<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:minWidth="350dip"
              android:padding="5dp">

    <TextView
            android:gravity="center"
            android:textSize="80sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exam_percent"
            android:layout_marginBottom="10dp"
            android:text="100%"
            />

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exam_try_again"
            android:text="@string/try_again"/>

    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exam_redo_wrong"
            android:text="@string/exam_redo_wrong"/>

    <Button
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/exam_configure"
            android:text="@string/configure"/>
</LinearLayout>
